# metar_c_decoder

./: CMakeLists.txt  LICENSE  README.md
include/: metar.h
src/: metar.c
test/: metar_test.c
